@@ -1,3 +1,4 @@
+- adapt to perl-URPM 3.00 API to parse pubkey files
 - adjust Uzbek locale (cf locales-uz change)
 - sort languages in "choose language" step in text mode
 - diskdrake:
